@@ -37,7 +37,6 @@ Changes to 0.5.3
   running
 * Allow reading arbitrarily long compiled file record lines
 * Some very minor leaks fixed
-* Default float precision lowered to 128 bits
 * Fix interrupting input while not calculating anything (this was a nasty
   bug that prevented any further thing to be evaluated)
 * Don't allow executing anything if something else is executing, thus causing
