@@ -1,3 +1,8 @@
+Fri Feb 28 11:55:15 2003  George Lebl <jirka@5z.com>
+
+	* src/genius.c, src/gnome-genius.c: raise precision back to 256
+	  bits as mpfr is blazing fast on that as well.
+
 Fri Feb 28 11:11:56 2003  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.[ch], configure.in, src/Makefile.am:  If MPFR is present
